--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@videojs-player/vue": "^1.0.0",
     "@vueuse/integrations": "^10.4.1",
     "click-outside-vue3": "^4.0.1",
+    "firebase": "^10.7.2",
     "focus-trap": "^7.5.2",
     "linkify-string": "^4.1.1",
     "linkifyjs": "^4.1.1",
@@ -25,15 +26,15 @@
     "wavesurfer.js": "^7.3.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
     "@rollup/plugin-alias": "^5.0.0",
+    "@rushstack/eslint-patch": "^1.3.3",
     "@types/node": "^20.6.0",
     "@types/video.js": "7.x",
     "@vitejs/plugin-vue": "^4.3.4",
+    "@vue/eslint-config-prettier": "^8.0.0",
     "autoprefixer": "^10.4.15",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
