--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 Appium_Python_Client==3.1.1
 Appium_Python_Client==3.1.1
 Flask==3.0.2
+gunicorn==21.2.0
+Werkzeug==3.0.1
 Flask_Cors==4.0.0
 langchain_openai==0.0.5
 pymongo==4.6.1
