--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "^2.1.2",
     "@heroicons/vue": "^2.0.18",
     "@videojs-player/vue": "^1.0.0",
     "@vueuse/integrations": "^10.4.1",
