--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "hello-world-pwa",
-  "short_name": "hello-world-pwa",
+  "name": "hinge-auto",
+  "short_name": "hinge-auto",
   "theme_color": "#4DBA87",
   "icons": [
     {
